--- a/notebooks/curve_interface.ipynb
+++ b/notebooks/curve_interface.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "from os import path\n",
     "import MDAnalysis as mda\n",
-    "from PDB import PDBReader, PDBWriter\n",
-    "from find_haxis_curve import FindHelixAgent, PrepareHelix"
+    "from bentdna.PDB import PDBReader, PDBWriter\n",
+    "from bentdna.find_haxis_curve import FindHelixAgent, PrepareHelix"
    ]
   },
   {
@@ -28,28 +28,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/pnas_16mer/input exists\n",
-      "/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/pnas_16mer/output exists\n",
-      "cd /home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/pnas_16mer\n"
+      "/home/yizaochen/codes/bentdna/tests/pnas_16mer/input exists\n",
+      "/home/yizaochen/codes/bentdna/tests/pnas_16mer/output exists\n",
+      "cd /home/yizaochen/codes/bentdna/tests/pnas_16mer\n"
      ]
     }
    ],
    "source": [
     "host = 'pnas_16mer'\n",
     "n_bp = 16\n",
+    "find_helix_folder = '/home/yizaochen/codes/bentdna/tests'\n",
     "\n",
-    "prep_helix = PrepareHelix(host)\n",
+    "prep_helix = PrepareHelix(find_helix_folder, host, n_bp)\n",
     "print(f'cd {prep_helix.workfolder}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cp /home/yizaochen/codes/dna_rna/all_systems/pnas_16mer/bdna+bdna/input/allatoms/bdna+bdna.all.xtc /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna+bdna.all.xtc\n",
+      "cp /home/yizaochen/codes/dna_rna/all_systems/pnas_16mer/bdna+bdna/input/allatoms/bdna+bdna.npt4.all.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna+bdna.npt4.all.pdb\n"
+     ]
+    }
+   ],
    "source": [
     "prep_helix.copy_input_xtc()\n",
     "prep_helix.copy_input_pdb()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cut trajectory for testcase\n",
+    "`gmx trjcat -f bdna+bdna.all.xtc -o temp.xtc -e 1000`  \n",
+    "`mv temp.xtc bdna+bdna.all.xtc`"
    ]
   },
   {
@@ -61,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vmd -pdb /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/bdna+bdna.npt4.all.pdb /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/bdna+bdna.all.xtc\n",
+      "vmd -pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna+bdna.npt4.all.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna+bdna.all.xtc\n",
       "In vmd tkconsole\n",
-      "animate write dcd /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/bdna+bdna.0_1000ns.10000frames.dcd beg 1 end 10001 waitfor all\n"
+      "animate write dcd /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna+bdna.0_1ns.10frames.dcd beg 1 end 11 waitfor all\n"
      ]
     }
    ],
@@ -97,9 +116,9 @@
     "print(cmd)\n",
     "\n",
     "# In vmd tkconsole\n",
-    "dcd_out = path.join(prep_helix.input_folder, 'bdna+bdna.0_1000ns.10000frames.dcd')\n",
+    "dcd_out = path.join(prep_helix.input_folder, 'bdna+bdna.0_1ns.10frames.dcd')\n",
     "print('In vmd tkconsole')\n",
-    "cmd = f'animate write dcd {dcd_out} beg 1 end 10001 waitfor all'\n",
+    "cmd = f'animate write dcd {dcd_out} beg 1 end 11 waitfor all'\n",
     "print(cmd)"
    ]
   },
@@ -112,10 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vim /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna+bdna.npt4.all.pdb\n"
+     ]
+    }
+   ],
    "source": [
+    "pdb_modified = path.join(prep_helix.input_folder, 'bdna_modi.pdb')\n",
     "# check pdb, to see whether require to change resid\n",
     "cmd = f'vim {prep_helix.pdb_in}'\n",
     "print(cmd)"
@@ -123,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write PDB: /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/bdna_modi.pdb\n"
+      "Write PDB: /home/yizaochen/codes/bentdna/tests/pnas_16mer/input/bdna_modi.pdb\n"
      ]
     }
    ],
@@ -144,7 +172,7 @@
     "    if atom.segid == 'B':\n",
     "        atom.resid += resid_offset\n",
     "        \n",
-    "pdb_modified = path.join(prep_helix.input_folder, 'bdna_modi.pdb')\n",
+    "\n",
     "writer = PDBWriter(pdb_modified, atgs)\n",
     "writer.write_pdb()"
    ]
@@ -158,17 +186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/pdbs_allatoms\n",
-      "mkdir /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/curve_workdir_0_10001\n",
-      "mkdir /home/yizaochen/codes/dna_rna/length_effect/ipynbs/find_helical_axis/pnas_amber/pdbs_haxis\n",
-      "There are 10001 frames.\n"
+      "/home/yizaochen/codes/bentdna/tests/pnas_16mer/pdbs_allatoms exists\n",
+      "/home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11 exists\n",
+      "/home/yizaochen/codes/bentdna/tests/pnas_16mer/pdbs_haxis exists\n",
+      "mkdir /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth\n",
+      "There are 11 frames.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yizaochen/miniconda3/envs/bentdna/lib/python3.8/site-packages/MDAnalysis/topology/PDBParser.py:330: UserWarning: Element information is absent or missing for a few atoms. Elements attributes will not be populated.\n",
+      "  warnings.warn(\"Element information is absent or missing for a few \"\n"
      ]
     }
    ],
@@ -185,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,11 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.0.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.1.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.2.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.3.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.4.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.5.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.6.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.7.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.8.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.9.pdb\n",
+      "cp /home/yizaochen/codes/bentdna/tests/pnas_16mer/curve_workdir_0_11/r+bdna_X.pdb /home/yizaochen/codes/bentdna/tests/pnas_16mer/haxis_smooth/haxis.smooth.10.pdb\n"
+     ]
+    }
+   ],
    "source": [
-    "f_agent.curveplus_find_haxis()"
+    "f_agent.curveplus_find_smooth_haxis()\n",
+    "#f_agent.curveplus_find_haxis()"
    ]
   },
   {
@@ -232,6 +288,7 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
     "cmd = 'vmd'\n",
     "print(cmd)\n",
     "\n",
@@ -246,7 +303,8 @@
     "\n",
     "haxis_dcd = path.join(prep_helix.input_folder, 'haxis.dcd')\n",
     "cmd = f'animate write dcd {haxis_dcd} beg {start} end {end} waitfor all'\n",
-    "print(cmd)"
+    "print(cmd)\n",
+    "\"\"\""
    ]
   },
   {
@@ -265,6 +323,7 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
     "pdb_ref = path.join(prep_helix.workfolder, 'pdbs_haxis', 'haxis.0.pdb')\n",
     "cmd = f'vmd -pdb {pdb_ref} {haxis_dcd}'\n",
     "print(cmd)\n",
@@ -273,7 +332,8 @@
     "print(cmd)\n",
     "\n",
     "cmd = f'mol addfile {dcd_out} 1'\n",
-    "print(cmd)"
+    "print(cmd)\n",
+    "\"\"\""
    ]
   },
   {
@@ -297,9 +357,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
     "allpdbs = path.join(prep_helix.workfolder, 'pdbs_allatoms', '*')\n",
     "cmd = f'rm {allpdbs}'\n",
-    "print(cmd)"
+    "print(cmd)\n",
+    "\"\"\""
    ]
   },
   {
