Persistence Length Figure

--- a/notebooks/average_shape_theta_bar.ipynb
+++ b/notebooks/average_shape_theta_bar.ipynb
@@ -317,19 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a_tract_21mer: 0.3108229857738967\n",
-      "atat_21mer: 0.3731907728967301\n",
-      "ctct_21mer: 0.3529650788835654\n",
-      "g_tract_21mer: 0.36735862123014296\n",
-      "gcgc_21mer: 0.35035968746270296\n",
-      "tgtg_21mer: 0.3634271134772212\n"
+      "a_tract_21mer: 0.311\n",
+      "atat_21mer: 0.373\n",
+      "ctct_21mer: 0.353\n",
+      "g_tract_21mer: 0.367\n",
+      "gcgc_21mer: 0.350\n",
+      "tgtg_21mer: 0.363\n"
      ]
     }
    ],
@@ -339,19 +339,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a_tract_21mer: 17.80884526049911\n",
-      "atat_21mer: 21.382256240207827\n",
-      "ctct_21mer: 20.22340933553047\n",
-      "g_tract_21mer: 21.048098564232195\n",
-      "gcgc_21mer: 20.07413140313546\n",
-      "tgtg_21mer: 20.822839762866813\n"
+      "a_tract_21mer: 17.8\n",
+      "atat_21mer: 21.4\n",
+      "ctct_21mer: 20.2\n",
+      "g_tract_21mer: 21.0\n",
+      "gcgc_21mer: 20.1\n",
+      "tgtg_21mer: 20.8\n"
      ]
     }
    ],
