--- a/notebooks/fourier_analysis.ipynb
+++ b/notebooks/fourier_analysis.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from bentdna import shapefourier\n",
-    "bentna_folder = '/home/yizaochen/codes/bentdna'"
+    "bentna_folder = '/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis'"
    ]
   },
   {
@@ -22,23 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/yizaochen/codes/bentdna/tests/pnas_16mer/an_folder exists\n"
+      "/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/tat_21mer/an_folder exists\n"
      ]
     }
    ],
    "source": [
-    "workfolder = path.join(bentna_folder, 'tests')\n",
-    "host = 'pnas_16mer'\n",
-    "bp_id_first = 3\n",
-    "bp_id_last = 12\n",
-    "s_agent = shapefourier.ShapeAgent(workfolder, host)"
+    "host = 'tat_21mer'\n",
+    "s_agent = shapefourier.ShapeAgent(bentna_folder, host)"
    ]
   },
   {
@@ -50,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_begin = 1\n",
-    "n_end = 8\n",
+    "n_begin = 0\n",
+    "n_end = 9\n",
     "lastframe = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
