--- a/notebooks/curve_interface_average_structure.ipynb
+++ b/notebooks/curve_interface_average_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,20 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/tgtg_21mer/input exists\n",
-      "mkdir /home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/tgtg_21mer/avg_structure\n"
+      "/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/atat_21mer/input exists\n",
+      "/home/yizaochen/codes/dna_rna/length_effect/find_helical_axis/atat_21mer/avg_structure exists\n"
      ]
     }
    ],
    "source": [
-    "host = 'tgtg_21mer'\n",
+    "host = 'atat_21mer'\n",
     "a_agent = AvgAgent(findhelix_folder, host)"
    ]
   },
@@ -48,16 +48,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Convert /home/yizaochen/codes/dna_rna/all_systems/tgtg_21mer/bdna+bdna/input/heavyatoms/bdna+bdna.nohydrogen.avg.crd to /home/yizaochen/codes/dna_rna/all_systems/tgtg_21mer/bdna+bdna/input/heavyatoms/bdna+bdna.nohydrogen.avg.pdb\n",
+      "Convert /home/yizaochen/codes/dna_rna/all_systems/atat_21mer/bdna+bdna/input/heavyatoms/bdna+bdna.nohydrogen.avg.crd to /home/yizaochen/codes/dna_rna/all_systems/atat_21mer/bdna+bdna/input/heavyatoms/bdna+bdna.nohydrogen.avg.pdb\n",
       "Check by:\n",
-      "vmd -pdb /home/yizaochen/codes/dna_rna/all_systems/tgtg_21mer/bdna+bdna/input/heavyatoms/bdna+bdna.nohydrogen.avg.pdb\n"
+      "vmd -pdb /home/yizaochen/codes/dna_rna/all_systems/atat_21mer/bdna+bdna/input/heavyatoms/bdna+bdna.nohydrogen.avg.pdb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yizaochen/miniconda3/envs/bentdna/lib/python3.8/site-packages/MDAnalysis/coordinates/PDB.py:722: UserWarning: Unit cell dimensions not found. CRYST1 record set to unitary values.\n",
+      "  warnings.warn(\"Unit cell dimensions not found. \"\n",
+      "/home/yizaochen/miniconda3/envs/bentdna/lib/python3.8/site-packages/MDAnalysis/coordinates/PDB.py:1026: UserWarning: Found no information for attr: 'altLocs' Using default value of ' '\n",
+      "  warnings.warn(\"Found no information for attr: '{}'\"\n",
+      "/home/yizaochen/miniconda3/envs/bentdna/lib/python3.8/site-packages/MDAnalysis/coordinates/PDB.py:1026: UserWarning: Found no information for attr: 'icodes' Using default value of ' '\n",
+      "  warnings.warn(\"Found no information for attr: '{}'\"\n",
+      "/home/yizaochen/miniconda3/envs/bentdna/lib/python3.8/site-packages/MDAnalysis/coordinates/PDB.py:1026: UserWarning: Found no information for attr: 'occupancies' Using default value of '1.0'\n",
+      "  warnings.warn(\"Found no information for attr: '{}'\"\n"
      ]
     }
    ],
