--- a/notebooks/fourier_analysis.ipynb
+++ b/notebooks/fourier_analysis.ipynb
@@ -79,12 +79,12 @@
    "outputs": [],
    "source": [
     "# make, if need\n",
-    "df_an = s_agent.make_df_an(n_begin, n_end, lastframe)"
+    "#df_an = s_agent.make_df_an(n_begin, n_end, lastframe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +223,56 @@
    ],
    "source": [
     "df_an.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50000, 10)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_an.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.773175\n",
+       "1   -0.146665\n",
+       "2   -0.018208\n",
+       "3   -0.038473\n",
+       "4   -0.011935\n",
+       "5   -0.010827\n",
+       "6    0.021750\n",
+       "7   -0.002887\n",
+       "8    0.026122\n",
+       "9    0.000905\n",
+       "Name: 49999, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_an.iloc[49999]"
    ]
   },
   {
